[package]
name = "neo-test"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Testing framework for Neo N3 Rust smart contracts"
documentation = "https://docs.rs/neo-test"
rust-version.workspace = true
keywords = ["neo", "neovm", "blockchain", "smart-contracts", "testing"]
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[dependencies]
neo-devpack = { workspace = true }
neo-types = { workspace = true }
neo-syscalls = { workspace = true }
num-traits = "0.2"

[dev-dependencies]
trybuild = "1.0"
