[package]
name = "neo-types"
version = "0.1.0"
edition = "2021"
authors = ["Neo N3 DevPack Team"]
description = "Neo N3 Core Types for Smart Contract Development"
license = "MIT"
repository = "https://github.com/r3e-network/neo-llvm"
homepage = "https://github.com/r3e-network/neo-llvm"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
anyhow = "1.0"
num-bigint = { version = "0.4", features = ["std"] }
num-traits = "0.2"

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde", "num-bigint/serde"]
