[package]
name = "neo-types"
version = "0.1.0"
edition.workspace = true
authors = ["Neo N3 DevPack Team"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Neo N3 Core Types for Smart Contract Development"
rust-version.workspace = true
keywords = ["neo", "neovm", "blockchain", "smart-contracts", "types"]
categories = ["cryptography::cryptocurrencies", "data-structures"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
num-bigint = { version = "0.4", features = ["std"] }
num-traits = "0.2"

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde", "num-bigint/serde"]
